--- a/testt/pubspec.yaml
+++ b/testt/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   fl_chart: ^1.0.0
   table_calendar: ^3.2.0
   sqflite_common_ffi: ^2.3.5
+  path: ^1.9.1
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
